--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Jay's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: #EEF1FF;">
   <table cellspacing=10>
     <thead>
       <tr>
