--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing=10>
     <thead>
       <tr>
-        <td><img src="profile.jpeg" alt="Jay's profile picture"></td>
+        <td><img src="profile2.jpeg" alt="Jay's profile picture"></td>
         <td>
           <h1>Jay K. Boricha</h1>
           <p><em>Student at <strong>vishwakarma Goverment Engineering college</strong></em></p><br>
